chore(test): refactor util tests to Mockito interactions and dedupe log4j-core dependency
- Rewrote `CloseUtilTest` and `TaskUtilTest` to use mocked `Closeable`/`Future` objects with explicit `verify(...).close()` and `verify(...).get()` interaction checks (including exception scenarios via `doThrow`).
- Cleaned `build.gradle` by removing duplicated `log4j-core` entries, leaving a single `implementation "org.apache.logging.log4j:log4j-core:$log4j_version"`.